[gd_scene load_steps=13 format=2]

[ext_resource path="res://Art/Boss/Wizard/WizardChaseBarrier.png" type="Texture" id=1]
[ext_resource path="res://Entity/Boss/Wizard/WizardBeam.gd" type="Script" id=2]
[ext_resource path="res://Sound/Weapon/LaserBeam.wav" type="AudioStream" id=3]
[ext_resource path="res://Sound/Weapon/LaserPulse.wav" type="AudioStream" id=4]


[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.666667, 1 )
colors = PoolColorArray( 0, 0.862745, 0.0901961, 1, 0, 0.862745, 0.0901961, 1, 0, 0.862745, 0.0901961, 0 )

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.857143, 0.896825, 1 )
colors = PoolColorArray( 0, 0.862745, 0.0901961, 0, 0, 0.862745, 0.0901961, 1, 0, 0.862745, 0.0901961, 1, 0, 0.862745, 0.0901961, 0 )

[sub_resource type="RectangleShape2D" id=3]
resource_local_to_scene = true
extents = Vector2( 2, 10 )

[sub_resource type="Animation" id=4]
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("EndParticles:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FadeNode:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("EndParticles:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("FadeNode:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("EndParticles:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("FadeNode/Sprite:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("FadeNode/EndPolygon:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("BeamAudioStreamPlayer2D:volume_db")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -80.0, -2.0 ]
}

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath("FadeNode:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("EndParticles:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("EndParticles:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("FadeNode/Sprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("FadeNode/EndPolygon:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("FadeNode:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("BeamAudioStreamPlayer2D:volume_db")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -2.0, -80.0 ]
}

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath("EndParticlesOneShot:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FadeNode:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("FadeNode/Sprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("FadeNode/EndPolygon:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("FadeNode:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("EndParticlesOneShot:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=7]
resource_name = "charge"
tracks/0/type = "value"
tracks/0/path = NodePath("SightSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SightSprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.498039 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("EndParticlesCharge:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("EndParticlesCharge:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=8]
resource_name = "charge_end"
tracks/0/type = "value"
tracks/0/path = NodePath("SightSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SightSprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.498039 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("EndParticlesCharge:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("EndParticlesCharge:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="WizardChaseBeam" type="Node2D"]
script = ExtResource( 2 )

[node name="SightSprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.498039 )
position = Vector2( 0, 16 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 1, 32 )

[node name="FadeNode" type="Node2D" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )

[node name="Sprite" type="Sprite" parent="FadeNode"]
visible = false
position = Vector2( 0, 16 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 4, 32 )

[node name="EndPolygon" type="Polygon2D" parent="FadeNode"]
visible = false
position = Vector2( 0, 32 )
color = Color( 0, 0.862745, 0.0901961, 1 )
polygon = PoolVector2Array( -2, 0, 2, 0, 2, -1, -2, -1 )

[node name="EndParticles" type="CPUParticles2D" parent="."]
visible = false
position = Vector2( 0, 32 )
emitting = false
amount = 60
lifetime = 0.5
emission_shape = 2
emission_rect_extents = Vector2( 2, 0 )
direction = Vector2( 0, -1 )
spread = 80.0
gravity = Vector2( 0, 20 )
initial_velocity = 80.0
initial_velocity_random = 0.5
scale_amount = 2.0
scale_amount_random = 0.5
color_ramp = SubResource( 1 )

[node name="EndParticlesCharge" type="CPUParticles2D" parent="."]
position = Vector2( 0, 32 )
z_index = 10
amount = 15
lifetime = 0.75
emission_shape = 1
emission_sphere_radius = 16.0
direction = Vector2( 0, -1 )
spread = 80.0
gravity = Vector2( 0, 0 )
initial_velocity_random = 0.5
orbit_velocity = 0.1
radial_accel = -25.0
scale_amount = 2.0
scale_amount_random = 0.5
color_ramp = SubResource( 2 )

[node name="EndParticlesOneShot" type="CPUParticles2D" parent="."]
position = Vector2( 0, 32 )
emitting = false
amount = 60
lifetime = 0.2
one_shot = true
explosiveness = 0.73
emission_shape = 2
emission_rect_extents = Vector2( 2, 0 )
direction = Vector2( 0, -1 )
spread = 80.0
gravity = Vector2( 0, 20 )
initial_velocity = 180.0
initial_velocity_random = 0.5
scale_amount = 2.0
scale_amount_random = 0.5
color_ramp = SubResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="."]
cast_to = Vector2( 0, 1080 )

[node name="HurtArea" type="Area2D" parent="."]
monitoring = false
monitorable = false
collision_layer = 524288
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtArea"]
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/activate = SubResource( 4 )
anims/deactivate = SubResource( 5 )
anims/fire = SubResource( 6 )

[node name="ChargeAnimationPlayer" type="AnimationPlayer" parent="."]
anims/charge = SubResource( 7 )
anims/charge_end = SubResource( 8 )

[node name="PulseAudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="BeamAudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -80.0
[connection signal="body_entered" from="HurtArea" to="." method="_on_HurtArea_body_entered"]
